# fastapi-day9

./: .env  Dockerfile  Makefile  docker-compose.dev.yml  docker-compose.prod.yml  main.py  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: fc5ef5eed781_initdb.py
app/: main.py  main_openai.py
app/core/: settings.py
app/models/: database.py  engine.py
app/routes/: auth_route.py  post_route.py  user_route.py
app/schema/: auth.py  post.py  user.py
app/services/: auth_service.py  post_service.py  user_service.py
app/tasks/: email_tasks.py
app/utils/: generate_id.py
